[gd_scene load_steps=4 format=2]

[ext_resource path="res://DifficultyText.gd" type="Script" id=1]
[ext_resource path="res://Fonts/ARIAL.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="DifficultySelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="DifficultyText" type="Button" parent="."]
margin_right = 120.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Easy"

[connection signal="mouse_entered" from="DifficultyText" to="." method="_on_DifficultyText_mouse_entered"]
[connection signal="mouse_exited" from="DifficultyText" to="." method="_on_DifficultyText_mouse_exited"]
[connection signal="pressed" from="DifficultyText" to="." method="_on_DifficultyText_pressed"]
